--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
