--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
     "stripe": "^8.67.0"
   },
   "devDependencies": {
