--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.0.2",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
